<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_pwd"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toRightOf="@id/et_username"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_username"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/sign_in"
            android:onClick="signInWithToken"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            app:layout_constraintRight_toLeftOf="@id/btn_sign_out"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/sign_out"
            android:onClick="signOut"
            app:layout_constraintLeft_toRightOf="@id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            app:layout_constraintRight_toLeftOf="@id/btn_sign_up"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:onClick="signUp"
            app:layout_constraintLeft_toRightOf="@id/btn_sign_out"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            app:layout_constraintTop_toTopOf="@id/btn_sign_in"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/et_to_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_to_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_start_chat"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
            app:layout_constraintHorizontal_weight="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_start_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_chat"
            android:onClick="startChat"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/et_to_username"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/et_to_username"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="10dp"/>

        <FrameLayout
            android:id="@+id/fl_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_chat"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_log"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/log_hint"
        android:scrollbars="vertical"
        android:padding="10dp"/>

</LinearLayout>